welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: value update is not a member of java.awt.Color
    if(getCouleurSol()=c){
       ^SlugSnail:22: error: not found: value c
    if(getCouleurSol()=c){
                       ^